@@ -1,5 +1,33 @@
-# Kanban
+# KanbanBoard - Semestral project
 
-Class Diagram
+This is a semester project in software engineering B. The main task was to design and implement the production process using the given design pattern and hreads.
 
-![alt text](https://user-images.githubusercontent.com/55660903/76468753-00cc2800-63ed-11ea-983b-bb911b4adbb0.png)
+## Authors
+
+David Jamárik & Ladislav Volný
+
+## Assignment
+
+![alt text](https://user-images.githubusercontent.com/55660903/76703911-a6c1b000-66d5-11ea-8d04-6fe158419b54.png)
+
+## Design - UML diagrams
+
+### Class diagram
+
+![alt text](https://user-images.githubusercontent.com/55660903/76705508-c7433780-66e0-11ea-9176-00fc59d0d0dc.png)
+
+### Activity Diagram
+
+![alt text](https://user-images.githubusercontent.com/55660903/76705571-636d3e80-66e1-11ea-89aa-360f6bf39d25.jpg)
+
+## Installation
+a. clone git file to client (sourcetree).
+b. open InetelliJ IDEA (NetBEans, Eclipse)
+c. Import project from local directory.
+d. EDIT configuration
+  - Main class: sample.Main
+  - VM options: --module-path ${PATH_TO_FX} --add-modules=javafx.controls,javafx.fxml
+  - USE classpath of Module: Kanban
+  - JRE: Default (10-SDK of Kanban module)
+c. run project
+
